proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/correct/func_nest_func_calls.py
def f(x, y):
    print x, y

def g():
    return 20

def h():
    return 15

f(h(), g())
