proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/error/decorators.py
def f(x):
    return x

@f
def g():
    return
